--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,9 +4,9 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Georama", sans-serif;
 }
 
 body {
   background: white;
-  font-family: "Roboto", sans-serif;
 }
