--- a/src/components/Question/question.module.scss
+++ b/src/components/Question/question.module.scss
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   width: 800px;
+
+  @media (max-width: 802px) {
+    width: 100%;
+  }
 }
 
 .image {
@@ -11,6 +15,10 @@
 .choices {
   display: flex;
   justify-content: center;
+
+  @media (max-width: 800px) {
+    flex-direction: column;
+  }
 }
 
 .choiceBtn {
