:tada: feat: dark mode

--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -8,10 +8,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #1f1f1f;
+  color: var(--light);
 
   a {
-    color: #111;
+    color: var(--light);
   }
 
   @media (max-height: 1000px) {
